--- a/StalkerNet/StalkerNet.csproj
+++ b/StalkerNet/StalkerNet.csproj
@@ -210,6 +210,8 @@
     <Compile Include="Models\People.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\FamilyViewModel.cs" />
+    <Compile Include="ViewModels\PersonViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\script-includes.js" />
@@ -279,6 +281,8 @@
     <Content Include="Views\Personal\Delete.cshtml" />
     <Content Include="Views\Personal\Details.cshtml" />
     <Content Include="Views\Personal\Edit.cshtml" />
+    <Content Include="Views\Family\Create.cshtml" />
+    <Content Include="Views\Personal\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
